<resources>
    <string name="app_name">SmartHouse</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_room_settings">RoomSettingsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_world">Hello World!</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="welcome">Welcome to SmartHouse</string>
    <string name="default_web_client_id">831396624999-9u156ac1ctfpvdbh105vod77uh4nv81u.apps.googleusercontent.com</string>
    <string name="facebook_app_id">284943877854872</string>
    <string name="facebook_client_token">aa05af679ca2449d0ba68c99e28733c7</string>

    //home
    <string name="your_home_name">Your home name...</string>
    <string name="heating_control">Heating control</string>
    <string name="create_my_home">Create my home</string>
    <string name="input_home_name_error">The home name is too short. Try using a longer name</string>
    <string name="short_home_name_error">The home name is too short. Try using a longer name</string>
    <string name="long_home_name_error">The home name is too long. Try using a shorter name</string>
    <string name="welcome_to_home_creator">Welcome to \nHome creator</string>
    <string name="home_creator_text">\nGive your home a name and make it uniquely yours. Add a touch of comfort by enabling heating control – just check the box if you have heating. \n\nLet\'s make your home smarter, together.\n</string>


    //room
    <string name="your_room_name">Your room name...</string>
    <string name="welcome_to_room_creator">Welcome to \nRoom creator</string>
    <string name="short_room_name_error">The room name is too short. Try using a longer name</string>
    <string name="long_room_name_error">The room name is too long. Try using a shorter name</string>
    <string name="choose_room_type_error">No one room type has been chosen</string>
    <string name="room_creator_text">\nJust like a loving family, each room in your house is like a unique child, craving its own identity and care. It\'s time to give each little one – your rooms – a special name to make them feel cherished.  \n\nSo, go ahead and give each room a name, ensuring they feel special and not mixed up in the family chaos!</string>
    <string name="room_choose_type_text">\nAs each child has their predispositions, each room has its own unique character. \n\nChoose the room type, and we\'ll present devices crafted to enhance its distinct features.</string>

    <string name="profile">Profile</string>
    <string name="devices">Devices</string>
    <string name="create_room_btn">Create my room</string>
    <string name="toolbar_create_room_text">Create Room</string>
    <string name="press_plus_for_add_your_first_room">Press plus for add your first room</string>
    <string name="i_agree">I agree</string>
    <string name="please_agree_to_continue_using_the_app">Please agree to continue using the app</string>

    //room_menu
    <string name="context_menu_rename_room_text">Rename room</string>
    <string name="context_menu_change_picture">Change picture</string>
    <string name="context_menu_delete_room">Delete room</string>


    <string name="ok_btn_text">OK</string>
    <string name="cancel_btn_text">Cancel</string>

    <string name="dialog_rename_room_text">Here you can change the room name. Enter the new name and click ‘OK’</string>
    <string name="dialog_rename_home_text">Here you can change the home name. Enter the new name and click ‘OK’</string>
    <string name="dialog_delete_device_text">Here you can delete this device. If you will delete this device, all connected devices of the same type will change their ordinal numbers. Are you sure you want to delete the </string>
    <string name="dialog_delete_room_text">Here you can delete this room. Please note that all devices connected to this room will also be deleted, and you will need to reconnect them. This action cannot be undone. Are you sure you want to delete </string>
    <string name="dialog_delete_home_text">Here you can delete this home. Please note that all rooms and their devices created within this home will also be permanently deleted. This action cannot be undone. Are you sure you want to delete </string>
    <string name="context_menu_rename_home_text">Rename home</string>
    <string name="context_menu_delete_home">Delete home</string>
    <string name="your_new_name">Your new name...</string>
    <string name="name_editor">Name Editor</string>
    <string name="upgrades_coming_soon">Upgrades coming soon!</string>
</resources>