<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/changePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/context_menu_change_photo"

        android:title="@string/context_menu_change_picture"
       />
    <item
        android:id="@+id/renameRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/context_menu_rename_ico"
        android:title="@string/context_menu_rename_room_text"
        />

    <item
        android:id="@+id/deleteRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/context_menu_trash_ico"
        android:title="@string/context_menu_delete_room"
        />
</menu>