<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialog_title"
        android:textStyle="bold"
        android:textColor="@color/_333333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:text="@string/name_editor"
        android:fontFamily="@font/font_high"/>

    <TextView
        android:id="@+id/dialog_text"
        android:layout_marginTop="15dp"
        android:layout_below="@id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/_333333"
        android:textSize="8pt"/>

    <EditText
        android:id="@+id/dialog_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_text"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edit_text"
        android:digits="abcdefghijklmnopqrstuvwxyz *?!.,';:@/\|()-#$№^&amp;+=% ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"
        android:ems="10"
        android:hint="@string/your_new_name"
        android:inputType="text|textNoSuggestions|textCapSentences"
        android:padding="9dp"
        android:textColor="@color/_333333"
        android:textColorHint="@color/color_hint"/>

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/dialog_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_below="@+id/dialog_edit_text"
        android:textSize="6pt"
        android:visibility="gone"/>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/ok_btn_text"
        android:textColor="@color/white"
        android:layout_below="@+id/dialog_error"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#EF9A8C"
        android:layout_alignParentEnd="true"
        android:stateListAnimator="@null"/>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/dialog_error"
        android:text="@string/cancel_btn_text"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#EF9A8C"
        android:layout_gravity="end"
        />

</RelativeLayout>